--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
                             <p class="promo-block-text">Frontend Developer</p>
                         </div>
                         <ul class="list-inline">
-                            <li><a href="https://www.facebook.com/mayleo.cruz" class="social-icons" target="_blank"><i class="icon-social-facebook"></i></a></li>
-                            <li><a href="https://github.com/CruzMayra" class="social-icons" target="_blank"><i class="icon-social-github"></i></a></li>
+                            <li><a href="https://www.facebook.com/cruz.mayr4" class="social-icons" target="_blank"><i class="icon-social-facebook"></i></a></li>
+                            <li><a href="https://github.com/cruzmayra" class="social-icons" target="_blank"><i class="icon-social-github"></i></a></li>
                             <li><a href="https://www.linkedin.com/in/cruz-mayra" class="social-icons" target="_blank"><i class="icon-social-linkedin"></i></a></li>
                         </ul>
                     </div>
@@ -108,36 +108,34 @@
                         </div>
 
                         <!-- Progress Box -->
+                        <h3>Tech skills</h3>
                         <div class="progress-box">
-                            <h5>JS<span class="color-heading pull-right">Intermedio</span></h5>
+                            <img src="public/img/js-skill.png" alt="javascript-logo">
+                            <img src="public/img/html5-skill.png" alt="html5-logo">
+                            <img src="public/img/css3-skill.png" alt="css3-logo">
+                            <img src="public/img/jquery-skill.png" alt="jquery-logo">
+                            <img src="public/img/git-skill.png" alt="git-colaborativo-logo">
+                            <h5>.<span class="color-heading pull-right">Intermedio</span></h5>
                             <div class="progress">
                                 <div class="progress-bar bg-color-base" role="progressbar" data-width="50"></div>
                             </div>
                         </div>
                         <div class="progress-box">
-                            <h5>jQuery <span class="color-heading pull-right">Intermedio</span></h5>
-                            <div class="progress">
-                                <div class="progress-bar bg-color-base" role="progressbar" data-width="50"></div>
-                            </div>
-                        </div>
-                        <div class="progress-box">
-                            <h5>HTML5 <span class="color-heading pull-right">Intermedio</span></h5>
-                            <div class="progress">
-                                <div class="progress-bar bg-color-base" role="progressbar" data-width="50"></div>
-                            </div>
-                        </div>
-                        <div class="progress-box">
-                            <h5>CSS3 <span class="color-heading pull-right">Intermedio</span></h5>
-                            <div class="progress">
-                                <div class="progress-bar bg-color-base" role="progressbar" data-width="50"></div>
-                            </div>
-                        </div>
-                        <div class="progress-box">
-                            <h5>Bootstrap <span class="color-heading pull-right">Básico</span></h5>
+                            <img src="public/img/bootstrap-skill.png" alt="bootstrap-logo">
+                            <img src="public/img/materialize-skill.jpg" alt="materialize-logo">
+                            <img src="public/img/npm-skill.png" alt="npm-logo">
+                            <img src="public/img/firebase-skill.png" alt="firebase-logo">
+                            <img src="public/img/jasmine-skill.jpg" alt="jasmine-logo">
+                            <img src="public/img/api-skill.png" alt="api-logo">
+                            <h5>.<span class="color-heading pull-right">Básico</span></h5>
                             <div class="progress">
                                 <div class="progress-bar bg-color-base" role="progressbar" data-width="30"></div>
                             </div>
                         </div>
+
+                        <br><h3>Soft skills</h3>
+                        <p>Trabajo colaborativo, manejo del estrés, adaptable a los cambios.</p>
+                        
                         <!-- End Progress Box -->
                     </div>
                 </div>
@@ -217,7 +215,7 @@
                         <!-- Masonry Grid -->
                         <div class="masonry-grid row row-space-2">
                             <div class="masonry-grid-sizer col-xs-6 col-sm-6 col-md-1"></div>
-                            <div class="masonry-grid-item col-xs-12 col-sm-6 col-md-8 margin-b-4">
+                            <div class="masonry-grid-item col-xs-12 col-sm-12 col-md-12 margin-b-4">
                                 <!-- Work -->
                                 <div class="work work-popup-trigger">
                                     <div class="work-overlay">
@@ -225,7 +223,7 @@
                                     </div>
                                     <div class="work-popup-overlay">
                                         <div class="work-popup-content">
-                                            <a href="javascript:void(0);" class="work-popup-close">Hide</a>
+                                            <a href="javascript:void(0);" class="work-popup-close">Cerrar</a>
                                             <div class="margin-b-30">
                                                 <h3 class="margin-b-5">Venus e-commerce</h3>
                                                 <span>E-commerce</span>
@@ -234,7 +232,7 @@
                                                 <div class="col-sm-8 work-popup-content-divider sm-margin-b-20">
                                                     <div class="margin-t-10 sm-margin-t-0">
                                                         <p>E-commerce dirigo a mujeres jóvenes que disfrutan de un estilo en tendencia así como de las prendas sencillas y cómodas. </p>
-                                                        <p>Venus posee una interfaz sencilla e intuitiva que permite al usuario saber siempre en que sección se encuentra. Aprovecha el uso de una API para ofrecer una extensa variedad de productos.</p>
+                                                        <p>Proyecto colaborativo que aprovecha el uso de la técnica SPA para proveer una interfaz sencilla e intuitiva, permite al usuario saber siempre en que sección se encuentra gracias al uso del routing. Aprovecha el uso de las API's para ofrecer una extensa variedad de productos (Etsy) y un método de pago sencillo (PayPal).</p>
                                                         <ul class="list-inline work-popup-tag">
                                                             <li class="work-popup-tag-item"><a class="work-popup-tag-link" href="#">API,</a></li>
                                                             <li class="work-popup-tag-item"><a class="work-popup-tag-link" href="#">SPA,</a></li>
@@ -258,7 +256,7 @@
                                 </div>
                                 <!-- End Work -->
                             </div>
-                            <div class="masonry-grid-item col-xs-12 col-sm-6 col-md-4 margin-b-4">
+                            <div class="masonry-grid-item col-xs-12 col-sm-6 col-md-6 margin-b-4">
                                 <!-- Work -->
                                 <div class="work work-popup-trigger">
                                     <div class="work-overlay">
@@ -266,7 +264,7 @@
                                     </div>
                                     <div class="work-popup-overlay">
                                         <div class="work-popup-content">
-                                            <a href="javascript:void(0);" class="work-popup-close">Hide</a>
+                                            <a href="javascript:void(0);" class="work-popup-close">Cerrar</a>
                                             <div class="margin-b-30">
                                                 <h3 class="margin-b-5">Pokédex</h3>
                                                 <span>Consumo de una API</span>
@@ -275,6 +273,7 @@
                                                 <div class="col-sm-8 work-popup-content-divider sm-margin-b-20">
                                                     <div class="margin-t-10 sm-margin-t-0">
                                                         <p>Aplicación que emula la enciclopedia virtual que los entrenadores llevan consigo en la serie, para consultar las fichas de las diversas especies Pokémon.</p>
+                                                        <p>Proyecto individual que hace uso de una GrahpQL API para realizar una sola petición por medio de jQuery. Aprovecha el manejo del DOM para crear de manera dinámina los modales con la información particular de cada pokémon.</p>
                                                         <ul class="list-inline work-popup-tag">
                                                             <li class="work-popup-tag-item"><a class="work-popup-tag-link" href="#">API,</a></li>
                                                             <li class="work-popup-tag-item"><a class="work-popup-tag-link" href="#">GraphQL,</a></li>
@@ -296,7 +295,7 @@
                                 </div>
                                 <!-- End Work -->
                             </div>
-                            <div class="masonry-grid-item col-xs-12 col-sm-6 col-md-4 md-margin-b-4">
+                            <div class="masonry-grid-item col-xs-12 col-sm-6 col-md-6 md-margin-b-4">
                                 <!-- Work -->
                                 <div class="work work-popup-trigger">
                                     <div class="work-overlay">
@@ -304,7 +303,7 @@
                                     </div>
                                     <div class="work-popup-overlay">
                                         <div class="work-popup-content">
-                                            <a href="javascript:void(0);" class="work-popup-close">Hide</a>
+                                            <a href="javascript:void(0);" class="work-popup-close">Cerrar</a>
                                             <div class="margin-b-30">
                                                 <h3 class="margin-b-5">Ticket-hack</h3>
                                                 <span>Plataforma para el intercambio de boletos.</span>
@@ -313,7 +312,7 @@
                                                 <div class="col-sm-8 work-popup-content-divider sm-margin-b-20">
                                                     <div class="margin-t-10 sm-margin-t-0">
                                                         <p>Plataforma que busca ofrecer un espacio para el intercambio de boletos, principalmente para conciertos, desde una comunidad segura y confiable.</p>
-                                                        <p>Ticket-hack es un proyecto colaborativo realizado durante la hackatón interna de Laboratoria.</p>
+                                                        <p>Ticket-hack es un proyecto colaborativo realizado durante la hackatón interna de Laboratoria. Utiliza Firebase como medio de autentificación e identificación del usuario. Hace uso de la API de Ticketmaster para mostrar los eventos más próximos en la ciudad.</p>
                                                         <ul class="list-inline work-popup-tag">
                                                             <li class="work-popup-tag-item"><a class="work-popup-tag-link" href="#">API,</a></li>
                                                             <li class="work-popup-tag-item"><a class="work-popup-tag-link" href="#">Firebase,</a></li>
@@ -335,7 +334,7 @@
                                 </div>
                                 <!-- End Work -->
                             </div>
-                            <div class="masonry-grid-item col-xs-12 col-sm-6 col-md-4 md-margin-b-4">
+                            <div class="masonry-grid-item col-xs-12 col-sm-6 col-md-6 md-margin-b-4">
                                 <!-- Work -->
                                 <div class="work work-popup-trigger">
                                     <div class="work-overlay">
@@ -343,7 +342,7 @@
                                     </div>
                                     <div class="work-popup-overlay">
                                         <div class="work-popup-content">
-                                            <a href="javascript:void(0);" class="work-popup-close">Hide</a>
+                                            <a href="javascript:void(0);" class="work-popup-close">Cerrar</a>
                                             <div class="margin-b-30">
                                                 <h3 class="margin-b-5">Scribere</h3>
                                                 <span>Red social</span>
@@ -352,7 +351,7 @@
                                                 <div class="col-sm-8 work-popup-content-divider sm-margin-b-20">
                                                     <div class="margin-t-10 sm-margin-t-0">
                                                         <p>Red social para los entusiastas de la escritura. Scribere permite al usuario crear sus propias historias, leer las aportaciones de otros usuarios y guardar como favoritas aquellas historias que más lo impactaron.</p>
-                                                        <p>Proyecto colaborativo que utiliza la autentificación por medio de la API de Google: Firebase.</p>
+                                                        <p>Proyecto colaborativo que utiliza el feedback de los usuarios para su creación a fin de satisfacer sus necesidades. Scribere también hace uso de Firebase como medio de autentificación e identificación de los usuarios.</p>
                                                         <ul class="list-inline work-popup-tag">
                                                             <li class="work-popup-tag-item"><a class="work-popup-tag-link" href="#">Social network,</a></li>
                                                             <li class="work-popup-tag-item"><a class="work-popup-tag-link" href="#">Firebase,</a></li>
@@ -374,7 +373,7 @@
                                 </div>
                                 <!-- End Work -->
                             </div>
-                            <div class="masonry-grid-item col-xs-12 col-sm-6 col-md-4">
+                            <div class="masonry-grid-item col-xs-12 col-sm-6 col-md-6">
                                 <!-- Work -->
                                 <div class="work work-popup-trigger">
                                     <div class="work-overlay">
@@ -382,7 +381,7 @@
                                     </div>
                                     <div class="work-popup-overlay">
                                         <div class="work-popup-content">
-                                            <a href="javascript:void(0);" class="work-popup-close">Hide</a>
+                                            <a href="javascript:void(0);" class="work-popup-close">Cerrar</a>
                                             <div class="margin-b-30">
                                                 <h3 class="margin-b-5">LabCar</h3>
                                                 <span>Práctica con frameworks</span>
@@ -390,7 +389,7 @@
                                             <div class="row">
                                                 <div class="col-sm-8 work-popup-content-divider sm-margin-b-20">
                                                     <div class="margin-t-10 sm-margin-t-0">
-                                                        <p>Replica de la página de Lab-Car con la utilización de un framework, en este caso se encuentra desarollado en Bootstrap.</p>
+                                                        <p>Proyecto individual que replica la página de Lab-Car con la utilización, en ese momento, por primera vez de un framework (Bootstrap) y la aplicación del responsive design.</p>
                                                         <ul class="list-inline work-popup-tag">
                                                             <li class="work-popup-tag-item"><a class="work-popup-tag-link" href="#">Responsive,</a></li>
                                                             <li class="work-popup-tag-item"><a class="work-popup-tag-link" href="#">Bootstrap,</a></li>
@@ -436,11 +435,11 @@
                             <div class="row">
                                 <div class="col-md-3 col-xs-6 md-margin-b-30">
                                     <h5>Facebook</h5>
-                                    <a href="https://www.facebook.com/mayleo.cruz" class="h3" target="_blank"><i class="icon-social-facebook"></i></a>
+                                    <a href="https://www.facebook.com/cruz.mayr4" class="h3" target="_blank"><i class="icon-social-facebook"></i></a>
                                 </div>
                                 <div class="col-md-3 col-xs-6 md-margin-b-30">
                                     <h5>Github</h5>
-                                    <a href="https://github.com/CruzMayra" class="h3" target="_blank"><i class="icon-social-github"></i></a>
+                                    <a href="https://github.com/cruzmayra" class="h3" target="_blank"><i class="icon-social-github"></i></a>
                                 </div>
                                 <div class="col-md-3 col-xs-6">
                                     <h5>Linkedin</h5>
@@ -460,21 +459,8 @@
         <!-- End Contact -->
         <!--========== END PAGE LAYOUT ==========-->
 
-        <!--========== FOOTER ==========-->
-        <!-- <footer class="footer">
-            <div class="content container">
-                <div class="row">
-                    <div class="col-xs-6">
-                        <img class="footer-logo" src="img/mc-logo.png" alt="Aircv Logo">
-                    </div>
-                </div> -->
-                <!--// end row -->
-            <!-- </div>
-        </footer> -->
-        <!--========== END FOOTER ==========-->
-
         <!-- Back To Top -->
-        <a href="javascript:void(0);" class="js-back-to-top back-to-top">Top</a>
+        <a href="javascript:void(0);" class="js-back-to-top back-to-top"><i class="icon-arrow-up"></i></a>
 
         <!-- JAVASCRIPTS(Load javascripts at bottom, this will reduce page load time) -->
         <!-- CORE PLUGINS -->
