agregando soft skills

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     </div>
                     <div class="col-sm-8 col-sm-offset-1">
                         <div class="margin-b-60">
-                            <p>Soy Mayra Cruz, frontend developer con conocimientos de Javascript, HTML5, CSS3 y Excel. Me considero una persona con sentido de la responsabilidad y adaptación. Me gusta codear, aprender por mi cuenta y encontrar inspiración en el trabajo de otros.</p>
+                            <p class="h4">Soy Mayra Cruz, frontend developer con conocimientos de Javascript, HTML5, CSS3 y Excel. Me considero una persona con sentido de la responsabilidad y adaptación. Me gusta codear, aprender por mi cuenta y encontrar inspiración en el trabajo de otros.</p>
                         </div>
 
                         <!-- Progress Box -->
@@ -134,7 +134,9 @@
                         </div>
 
                         <br><h3>Soft skills</h3>
-                        <p>Trabajo colaborativo, manejo del estrés, adaptable a los cambios.</p>
+                        <img src="public/img/soft-skill.png" alt="reconocimiento">
+                        
+                        <p class="h4"><br> Trabajo colaborativo, compromiso, responsabilidad, self-learning. Me gusta compartir un poco de lo que sé con la gente que me rodea.</p>
                         
                         <!-- End Progress Box -->
                     </div>
@@ -443,7 +445,7 @@
                                 </div>
                                 <div class="col-md-3 col-xs-6">
                                     <h5>Linkedin</h5>
-                                    <a href="https://www.linkedin.com/cruz-mayra" class="h3" target="_blank"><i class="icon-social-linkedin"></i></a>
+                                    <a href="https://www.linkedin.com/in/cruz-mayra" class="h3" target="_blank"><i class="icon-social-linkedin"></i></a>
                                 </div>
                                 <div class="col-md-3 col-xs-6">
                                     <h5>Email</h5>
