complementando las secciones de about me y experiencia

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 																				</div>
 																				<div class="service-info">
 																						<h3>Administración</h3>
-																						<p class="margin-b-5">Más de cuatro años de experiencia en actividades administrativas.</p>
+																						<p class="margin-b-5">Más de cuatro años de experiencia como asistente administrativo.</p>
 																				</div>    
 																		</div>
 																</div>
