--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
 
 				<!-- Favicon -->
 				<link rel="shortcut icon" href="favicon.ico"/>
+				<!-- Global site tag (gtag.js) - Google Analytics -->
+				<script async src="https://www.googletagmanager.com/gtag/js?id=UA-119244767-1"></script>
+				<script>
+					window.dataLayer = window.dataLayer || [];
+					function gtag(){dataLayer.push(arguments);}
+					gtag('js', new Date());
+				  
+					gtag('config', 'UA-119244767-1');
+				  </script>
 		</head>
 		<!-- END HEAD -->
 
@@ -59,7 +68,7 @@
 																<li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#about">Acerca de mí</a></li>
 																<li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#experience">Experiencia</a></li>
 																<li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#work">Portafolio</a></li>
-																<li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#contact">Contacto</a></li>
+																<li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#contact">Contáctame</a></li>
 														</ul>
 												</div>
 										</div>
@@ -413,7 +422,7 @@
 																</div>
 																<!-- End Work -->
 														</div>
-												</div>
+												</div>	
 												<!-- End Masonry Grid -->
 										</div>
 								</div>
@@ -429,7 +438,7 @@
 										<div class="row">
 												<div class="col-sm-3 sm-margin-b-30">
 														<div class="text-right sm-text-left">
-																<h2 class="margin-b-0">Contacto</h2>
+																<h2 class="margin-b-0">Contáctame</h2>
 																<p></p>
 														</div>
 												</div>
