subiendo imagen de perfil

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <h2>Acerca de mí</h2>
             <div>
               <h4>¡Hola! Soy Mayra Cruz</h4>
-              <p>Desarrolladora frontend egresada de la quinta generación de <a href="http://www.laboratoria.la/">Laboratoria</a> , amante del poder de la tecnología y del código como generadores de impacto social. Chilanga por adopción. Autodidácta.</p>
+              <p>Desarrolladora frontend egresada de la quinta generación de <a href="http://www.laboratoria.la/" target="_blank">Laboratoria</a>, amante del poder de la tecnología y del código como generadores de impacto social. Chilanga por adopción. Autodidácta.</p>
               <p>Me gusta asistir a meetups y encontrar inspiración en el trabajo de otros. Busco proponer soluciones integrales por lo que me gustaría desarrollarme como fullstack developer en un futuro.</p>
               <button type="button" class="btn btn-lg"><a href="assets/curriculum-mayra-cruz.pdf" target="_blank">Descarga mi CV</a></button>
             </div>
