--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="css/main.css">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-119244767-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    
+    gtag('config', 'UA-119244767-1');
+  </script>
 </head>
 <body>
   <section class="show" id="home">
@@ -103,7 +112,7 @@
                 <p class="d-flex align-items-center"><img src="assets/images/firebase.png" alt="">&emsp;Firebase</p>
                 <div class="row">
                   <div class="col-md-12 col-12">
-                    <h6 class="d-flex align-items-center">También sé un poco de:</h6>
+                    <p class="d-flex align-items-center h6">También sé un poco de:</p>
                     <p>
                       <img src="assets/images/excel.png" alt="">                      
                       <i class="devicon-jasmine-plain-wordmark"></i>
