corrigiendo uso de rutas

--- a/404.html
+++ b/404.html
@@ -23,35 +23,13 @@
   </script>
 </head>
 <body>
-  <section class="show" id="home">
-    <nav class="navbar navbar-expand-lg justify-content-between row">
-      <a class="navbar-brand" href="/">
-        <img src="/assets/images/mc-logo.png" width="70" height="70" class="d-inline-block align-top" alt="mc-logo">
-      </a>
-      <div>
-        <ul class="nav">
-          <li class="nav-item">
-            <a class="nav-link" href="https://github.com/cruzmayra/" target="_blank"><i class="fab fa-github"></i></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="https://www.linkedin.com/in/cruz-mayra" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="https://www.facebook.com/cruz.mayr4" target="_blank"><i class="fab fa-facebook-f"></i></a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-
-    <section class="row d-flex justify-content-center align-self-center description-initial">
-      <div class="col-md-12 col-sm-12 text-center description">
-        <p>¡Hola! Soy Mayra Cruz,<br>frontend developer<br>por <a href="http://www.laboratoria.la/" target="_blank">Laboratoria</a>.</p>
-        <p class="animated infinite pulse"><a class="load-landing" href="/">Dale un vistazo a mi portafolio :)</a></p>
-      </div>
-    </section>
+  <!-- presentación -->
+  <section id="container">
+    
   </section>
+   <!-- fin presentación -->
 
-  <section class="hide" id="landing">
+  <!-- <section class="hide" id="landing">
     <nav class="navbar navbar-expand-lg">  
       <a class="navbar-brand" href="/">
         <img src="/assets/images/mc-logo-white.png" width="80" height="80" alt="mc-logo">
@@ -192,7 +170,7 @@
         <div class="col-md-4 text-center align-items-center">
           <h2 class="h2-footer">Contáctame</h2>
           <br>
-          <p><i class="far fa-envelope"></i><a href="mailto:#">velazquez.leonora@gmail.com</a></p>
+          <a href="mailto:velazquez.leonora@gmail.com">velazquez.leonora[arroba]gmail[punto]com</a>
         </div>
         <div class="col-md-4 text-center">
           <div class="social-network">
@@ -209,12 +187,12 @@
       </div>
       </footer>
       
-  </section>
+  </section> -->
 
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  <script type="text/javascript" src="js/vendors/page.js"></script>
+  <script type="text/javascript" src="js/vendors/page-punto-js/page.js"></script>
   <script type="text/javascript" src="js/data.js"></script>  
   <script type="text/javascript" src="js/app.js"></script>
 </body>
