--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 				<link rel="shortcut icon" type="image/x-icon" href="assets/icon/logo-page.ico">
 				<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">  
 				<link href="https://fonts.googleapis.com/css?family=Josefin+Sans:100,300,400,600,700" rel="stylesheet">
-				<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+				<link rel="stylesheet" href="css/vendors/style.css">
 				<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 				<link rel="stylesheet" href="css/main.css">
 				<!-- Global site tag (gtag.js) - Google Analytics -->
@@ -56,13 +56,13 @@
 						<div>
 							<ul class="nav">
 								<li class="nav-item">
-									<a class="nav-link" href="https://github.com/cruzmayra/" target="_blank"><i class="fab fa-github"></i></a>
+									<a class="nav-link" href="https://github.com/cruzmayra/" target="_blank"><span class="icon-github2"></span></a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link" href="https://www.linkedin.com/in/cruz-mayra" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+									<a class="nav-link" href="https://www.linkedin.com/in/cruz-mayra" target="_blank"><span class="icon-linkedin2"></span></a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link" href="https://www.facebook.com/cruz.mayr4" target="_blank"><i class="fab fa-facebook-f"></i></a>
+									<a class="nav-link" href="https://www.facebook.com/cruz.mayr4" target="_blank"><span class="icon-facebook2"></span></a>
 								</li>
 							</ul>
 						</div>
@@ -82,15 +82,15 @@
 							</div>
 							<div class="col-md-4 text-center">
 								<div class="social-network">
-									<a class="" href="https://github.com/cruzmayra/" target="_blank"><i class="fab fa-github"></i></a>
-									<a class="" href="https://www.linkedin.com/in/cruz-mayra" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-									<a class="" href="https://www.facebook.com/cruz.mayr4" target="_blank"><i class="fab fa-facebook-f"></i></a>
+									<a class="" href="https://github.com/cruzmayra/" target="_blank"><span class="icon-github2"></span></a>
+									<a class="" href="https://www.linkedin.com/in/cruz-mayra" target="_blank"><span class="icon-linkedin2"></span></a>
+									<a class="" href="https://www.facebook.com/cruz.mayr4" target="_blank"><span class="icon-facebook2"></span></a>
 								</div>
 									<button type="button" class="btn btn-lg cv-footer"><a href="assets/curriculum-mayra-cruz.pdf" target="_blank">Descarga mi CV</a></button>      
-									<p>Trabajemos juntos :)</p>      
+									<p>¡Trabajemos juntos!</p>      
 							</div>
 							<div class="col-md-4 d-flex justify-content-center align-items-center">
-								<p>© 2018 Coded with <i class="fas fa-heart"></i> by Mayra Cruz</p>
+								<p>© 2018 Coded with <span class="icon-heart"></span> by Mayra Cruz</p>
 							</div>
 						</div>
 					</footer>
