--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 				<link rel="shortcut icon" type="image/x-icon" href="assets/icon/logo-page.ico">
         <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:100,300,400,600,700" rel="stylesheet">
         <link rel="stylesheet" href="css/vendors/style.css">
-				<!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous"> -->
 				<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 				<link rel="stylesheet" href="css/main.css">
 				<!-- Global site tag (gtag.js) - Google Analytics -->
@@ -25,7 +24,7 @@
 				<section id="container">
 					<!-- navbar para portafolio y proyectos -->
 					<nav id='principal-nav' class="navbar navbar-expand-lg fixed-top hide">
-            <a class="navbar-brand" href="/portafolio">
+            <a class="navbar-brand" href="/#!/portafolio">
               MC
 						</a>
 						<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#landing-navbar" aria-controls="landing-navbar" aria-expanded="false" aria-label="Toggle navigation">
@@ -35,13 +34,13 @@
 						<div class="collapse navbar-collapse" id="landing-navbar">
 							<ul class="navbar-nav">
 								<li class="nav-item">
-									<a class="nav-link" href="/portafolio#about-me">Acerca de mí</a>
+									<a class="nav-link" href="#about-me">Acerca de mí</a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link" href="/portafolio#my-work">Mi trabajo</a>
+									<a class="nav-link" href="#my-work">Mi trabajo</a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link" href="/portafolio#contact">Contáctame</a>
+									<a class="nav-link" href="#contact">Contáctame</a>
 								</li>
 							</ul>
 						</div>
@@ -50,7 +49,7 @@
 			
 					<!-- navbar para la sección de presentación -->
 					<nav id="nav-presentation" class="navbar navbar-expand-lg justify-content-between row fixed-top">
-						<a class="navbar-brand" href="/">
+						<a class="navbar-brand" href="/portafolio">
               <!-- <img src="/assets/images/mc-logo.png" width="70" height="70" class="d-inline-block align-top" alt="mc-logo"> -->
               MC
 						</a>
@@ -84,7 +83,7 @@
 									<a class="" href="https://www.linkedin.com/in/cruz-mayra" target="_blank"><span class="icon-linkedin"></span></a>
 								</div>
 									<button type="button" class="btn btn-lg cv-footer"><a href="assets/curriculum-mayra-cruz.pdf" target="_blank">Descarga mi CV</a></button>      
-									<p>Trabajemos juntos</p>      
+									<p>Trabajemos juntos</p>
 							</div>
 							<div class="col-md-4 d-flex justify-content-center align-items-center">
 								<p>© 2018 Coded with ❤ by Mayra Cruz</p>
@@ -95,7 +94,7 @@
 				</section>
 			
 				<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-				<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script> -->
+				<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 				<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 				<script type="text/javascript" src="js/vendors/page-punto-js/page.js"></script>
 				<script type="text/javascript" src="js/data.js"></script>  
