actualización de rutas

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				<section id="container">
 					<!-- navbar para portafolio y proyectos -->
 					<nav id='principal-nav' class="navbar navbar-expand-lg fixed-top hide">
-            <a class="navbar-brand" href="/#!/portafolio">
+            <a class="navbar-brand" href="/home">
               MC
 						</a>
 						<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#landing-navbar" aria-controls="landing-navbar" aria-expanded="false" aria-label="Toggle navigation">
@@ -49,7 +49,7 @@
 			
 					<!-- navbar para la sección de presentación -->
 					<nav id="nav-presentation" class="navbar navbar-expand-lg justify-content-between row fixed-top">
-						<a class="navbar-brand" href="/portafolio">
+						<a class="navbar-brand" href="/">
               <!-- <img src="/assets/images/mc-logo.png" width="70" height="70" class="d-inline-block align-top" alt="mc-logo"> -->
               MC
 						</a>
