actualización de rutas x2

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 			
 					<!-- navbar para la sección de presentación -->
 					<nav id="nav-presentation" class="navbar navbar-expand-lg justify-content-between row fixed-top">
-						<a class="navbar-brand" href="/">
+						<a class="navbar-brand" href="/portafolio">
               <!-- <img src="/assets/images/mc-logo.png" width="70" height="70" class="d-inline-block align-top" alt="mc-logo"> -->
               MC
 						</a>
